--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Django进阶教程</title>
+    <title>mongodb demo</title>
 </head>
 <body>
 <p>
-    欢迎来到Django进阶课程
+    在django中使用mongodb
 </p>
 <p>
     {{ show_title }}
